Uso de .env Secretos y Docker actualizados